--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <section class="contact" id="contact">
     <div class="container">
       <h2>Let’s Work Together</h2>
-      <p>Interested in working with me? Contact me via WhatsApp.</p>
+      <p>Interested in working with me? Contact me via WhatsApp.</p><br>
       <a href="https://wa.me/2348024086599" target="_blank" class="btn">📲 Message Me</a>
     </div>
   </section>
